--- a/amisweb/perfmon.html
+++ b/amisweb/perfmon.html
@@ -65,6 +65,8 @@
 			<legend>Exchange points</legend>
 			<label>LEARN/CUDI - El Paso, TX<input type="checkbox" name="exchange"/></label>
 			<label>AMPATH/SOL - Miami, FL<input type="checkbox" name="exchange"/></label><br/>
+			<label>UKY Location</label><input type="radio" name="location" checked="true" id="ukyresultscheck"></input>
+			<label>Starlight Location</label><input type="radio" name="location" id="starresultscheck"></input><br/>
 			<label for="perfMonType">Performance monitoring granularity/type:</label>
 			<select id="perfMonitorType" name="perfMonType" onchange="perfMonitorTypeChange()">
 				<option value="pktValidation">Packet Validation</option>
