--- a/amisweb/gsr.html
+++ b/amisweb/gsr.html
@@ -56,32 +56,16 @@
 	</header>
 
 	<main>
-		<h1>University of Massachussetts, Lowell (UML)<img src="images/uml_logo.png" alt="UML logo" width="100"/></h1>
-		<h2>Principal Investigator: Yan Luo</h2>
-		<h2>Graduate Students</h2>
-		<ul>
-			<li>Xiaoban Wu</li>
-		</ul>
-		<h1>University of Massachussetts, Boston (UMB)<img src="images/umb_logo.png" alt="UMB logo" width="100"/></h1>
-		<h2>Principal Investigator: Gabriel Ghinita</h2>
-		<h2>Graduate Students</h2>
-		<ul>
-			<li>Mihai Maruseac</li>
-			<li>Oana Niculaescu</li>
-		</ul>
-		<h1>University of Kentucky (UKY)<img src="images/uky_logo.png" alt="UKY logo" width="100"/></h1>
-		<h2>Principal Investigator: V. Cody Bumgardner</h2>
-		<h2>Graduate Students</h2>
-		<ul>
-			<li>Caylin Hickey</li>
-		</ul>
-		<h1>University of Texas, El Paso (UTEP)<img src="images/utep_logo.png" alt="UML logo" width="100"/></h1>
-		<h2>Principal Investigator: Michael P. McGarry</h2>
-		<h2>Graduate Students</h2>
-		<ul>
-			<li>Jose A. Hernandez</li>
-			<li>Rodrigo Ibanez-Alcala</li>
-		</ul>
+		<h1>Global Science Registry (GSR)</h1>
+		<p>The Global Science Registry is a database created by the GLOBAL RING NETWORK FOR ADVANCED APPLICATIONS DEVELOPMENT 
+		<a href="http://www.gloriad.org/gloriaddrupal/">(GLORIAD)</a> organization. The GSR contains information that fundamentally
+		permits the mapping of IP addresses and BGP Autonomous System (AS) numbers to Organizational Data (e.g., Organization Name, 
+		Address, Geographic coordinates) and vice versa.
+		</p>
+		<p>
+		As part of the AMIS project we have created a database modeled after the GSR and we hope to merge the two systems in the near 
+		future. Access to our system for authorized users can be found <a href="gsr/index.html">here</a>.
+		</p>
 		
 	</main>
 
