--- a/amisweb/index.html
+++ b/amisweb/index.html
@@ -14,14 +14,14 @@
 		<h1 id="pagehdr">Advanced Measurement Instrument and Services (AMIS)</h1>
 		<nav>
 			<ul>
-				<li><a href="index.html" class = "active">About</a></li>
+				<li><a href="index.html">About</a></li>
 				<li><a href="define.html">Define Measurement Task</a>
 					<ul class="drop">
 						<li><a href="perfmon.html">Performance Monitoring</a></li>
 						<li><a href="faultdet.html">Fault Detection</a></li>
 					</ul>
 				</li>
-				<li><a href="viewdata.html">View Measurement Data</a>
+				<li><a href="viewdata.html" class = "active">View Measurement Data</a>
 					<ul class="drop">
 						<li><a href="taskresults.html">Task Results</a></li>
 						<li><a href="geoviz.html">Geo Visualizations</a></li>
