--- a/amisweb/tasklist.html
+++ b/amisweb/tasklist.html
@@ -25,8 +25,8 @@
 				</li>
 				<li><a href="viewdata.html" class = "active">View Measurement Data</a>
 					<ul class="drop">
-						<li><a href="tasklist.html">Task List</a></li>
 						<li><a href="taskresults.html">Task Results</a></li>
+						<li><a href="geoviz.html">Geo Visualizations</a></li>
 						<li><a href="toptalkers.html">Top Talkers</a></li>
 						<li>Descriptive Analysis
 							<ul class="drop2">
@@ -50,7 +50,7 @@
 						</li>
 					</ul>
 				</li>
-				<li><a href="gsr.html">Global Science Registry</a></li>
+				<li><a href="iplookup.html">IP Address Lookup</a></li>
 				<li><a href="people.html">Project Team</a></li>
 				<li><a href="training.html">Training Materials</a></li>
 			</ul>
