--- a/amisweb/viewdata.html
+++ b/amisweb/viewdata.html
@@ -24,6 +24,7 @@
 				<li><a href="viewdata.html" class = "active">View Measurement Data</a>
 					<ul class="drop">
 						<li><a href="taskresults.html">Task Results</a></li>
+						<li><a href="geoviz.html">Geo Visualizations</a></li>
 						<li><a href="toptalkers.html">Top Talkers</a></li>
 						<li>Descriptive Analysis
 							<ul class="drop2">
