--- a/amisweb/iplookup.html
+++ b/amisweb/iplookup.html
@@ -5,12 +5,11 @@
 	<meta charset="UTF-8">
 	<title>Advanced Measurement Instrument and Services (AMIS)</title>
 	<link rel="stylesheet" href="css/amis.css">
-	<link rel="stylesheet" href="css/leaflet.css" />
 	<script src="js/amis.js"></script>
 	<script src="js/jquery-2.2.2.min.js"></script>
-	<script src="js/d3.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 	<script src="https://d3js.org/queue.v1.min.js" type="text/JavaScript"></script>
-	<script src="js/leaflet.js"></script>
+	<script src="js/searchip.js"></script>
 </head>
 
 <body onload="setCurrentYear()">
@@ -26,7 +25,7 @@
 						<li><a href="faultdet.html">Fault Detection</a></li>
 					</ul>
 				</li>
-				<li><a href="viewdata.html">View Measurement Data</a>
+				<li><a href="viewdata.html" class = "active">View Measurement Data</a>
 					<ul class="drop">
 						<li><a href="taskresults.html">Task Results</a></li>
 						<li><a href="geoviz.html">Geo Visualizations</a></li>
@@ -36,20 +35,24 @@
 								<li>Traffic Matrix</li>
 								<li>Flow Statistics</li>
 								<li>Burst Statistics</li>
-							</ul></li>
+							</ul>
+						</li>
 						<li>Exploratory Analysis
 							<ul class="drop2">
 								<li>Flow Classification</li>
 								<li>Network Anomaly Detection</li>
 								<li>Network Event Detection</li>
-							</ul></li>
+							</ul>
+						</li>
 						<li>Predictive Analysis
 							<ul class="drop2">
 								<li>Congestion Prediction</li>
 								<li>Network Anomaly Prediction</li>
-							</ul></li>
-					</ul></li>
-				<li><a href="iplookup.html" class = "active">IP Address Lookup</a></li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+				<li><a href="iplookup.html">IP Address Lookup</a></li>
 				<li><a href="people.html">Project Team</a></li>
 				<li><a href="training.html">Training Materials</a></li>
 			</ul>
@@ -61,14 +64,18 @@
 			<fieldset id="ipsearch">
 				<legend>Search IP Address</legend>
 				<label>IPv4 Address (###.###.###.###): <input id="searchtermdot" type="text" name="searchTerm" placeholder="255.255.255.255" pattern="\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}"/></label>
-    	    	<input type="submit" onclick="getIPData();" value="Obtain IP data" /><br/>
+				<button type="button" id="dotsearchbutton">Search IP</button><br/>
 			</fieldset>
-
-		<p id="displayMsg"></p>
-					
-		<div id="resultContainer"></div>
-
-		<div id="mapContainer"></div>
+			
+			<fieldset id="ipsearch">
+				<legend>Search IP Address</legend>
+				<label>Decimal IP Address: <input id="searchtermdec" type="text" name="searchTerm" placeholder="4294967295" pattern="\d{1-10}\"/></label>
+				<button type="button" id="decsearchbutton">Search IP</button><br/>
+			</fieldset>
+			
+			<div id="resultcontainer">
+				<p></p>
+			</div>
 		
 	</main>
 
