--- a/amisweb/perfmon.html
+++ b/amisweb/perfmon.html
@@ -16,33 +16,37 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">About</a></li>
-				<li><a href="define.html" class = "active">Define Measurement Task</a>
+				<li><a href="define.html">Define Measurement Task</a>
 					<ul class="drop">
 						<li><a href="perfmon.html">Performance Monitoring</a></li>
 						<li><a href="faultdet.html">Fault Detection</a></li>
 					</ul>
 				</li>
-				<li><a href="viewdata.html">View Measurement Data</a>
+				<li><a href="viewdata.html" class = "active">View Measurement Data</a>
 					<ul class="drop">
 						<li><a href="taskresults.html">Task Results</a></li>
+						<li><a href="geoviz.html">Geo Visualizations</a></li>
 						<li><a href="toptalkers.html">Top Talkers</a></li>
 						<li>Descriptive Analysis
 							<ul class="drop2">
 								<li>Traffic Matrix</li>
 								<li>Flow Statistics</li>
 								<li>Burst Statistics</li>
-							</ul></li>
+							</ul>
+						</li>
 						<li>Exploratory Analysis
 							<ul class="drop2">
 								<li>Flow Classification</li>
 								<li>Network Anomaly Detection</li>
 								<li>Network Event Detection</li>
-							</ul></li>
+							</ul>
+						</li>
 						<li>Predictive Analysis
 							<ul class="drop2">
 								<li>Congestion Prediction</li>
 								<li>Network Anomaly Prediction</li>
-							</ul></li>
+							</ul>
+						</li>
 					</ul>
 				</li>
 				<li><a href="iplookup.html">IP Address Lookup</a></li>
