--- a/amisweb/training.html
+++ b/amisweb/training.html
@@ -21,7 +21,7 @@
 						<li><a href="faultdet.html">Fault Detection</a></li>
 					</ul>
 				</li>
-				<li><a href="viewdata.html">View Measurement Data</a>
+				<li><a href="viewdata.html" class = "active">View Measurement Data</a>
 					<ul class="drop">
 						<li><a href="taskresults.html">Task Results</a></li>
 						<li><a href="geoviz.html">Geo Visualizations</a></li>
@@ -50,7 +50,7 @@
 				</li>
 				<li><a href="iplookup.html">IP Address Lookup</a></li>
 				<li><a href="people.html">Project Team</a></li>
-				<li><a href="training.html" class = "active">Training Materials</a></li>
+				<li><a href="training.html">Training Materials</a></li>
 			</ul>
 		</nav>		
 	</header>
@@ -148,9 +148,6 @@
 			<li>Yuan, Lihua, Chen-Nee Chuah, and Prasant Mohapatra. 
 			<a href="http://dl.acm.org/citation.cfm?id=1959451">"ProgME: towards programmable network measurement."</a>
 			IEEE/ACM Transactions on Networking (TON) 19.1 (2011): 115-128.</li>
-			<li>Cisco Systems
-			<a href="http://www.cisco.com/c/en/us/products/collateral/ios-nx-os-software/ios-netflow/prod_white_paper0900aecd80406232.html">Introduction to Cisco IOS NetFlow</a>
-			</li>
 			<li><a href="http://www.caida.org/home/">Center for Applied Internet Data Analysis (CAIDA)</a>
 			<li><a href="http://www.measurementlab.net">Measuement Lab (M-Lab)</a></li>
 			<li><a href="http://gloriad.org/gloriaddrupal/index.php">Global Ring Network for Advanced Applications Development (GLORIAD)</a></li>
