--- a/amisweb/geoviz.html
+++ b/amisweb/geoviz.html
@@ -86,12 +86,8 @@
 			<input id="reloadButt" type="button" name="reload" value="Reload Map" title="Reload map data"></input>
 			<br/>
 			<label for="dataSelTxt">Dataset Selection:</label>
-			<!-- <select id="dataSel" name="dataSelect">
-				<option value="1">Dataset 1</option>
-				<option value="2" selected="selected">Dataset 2</option>
-				<option value="3">Dataset 3</option>
-			</select> -->
-			<input type="text" name="dataSelTxt" id="dataSelTxt" placeholder="instrumentData2" value="instrumentData2"></input>
+			<select id="dataSel" name="dataSelect"></select>
+			<!-- <input type="text" name="dataSelTxt" id="dataSelTxt" placeholder="instrumentData2" value="instrumentData2"></input> -->
 			<input id="loadButt" type="button" name="load" value="Load Data" title="Load the indicated dataset into map"></input>
 			<input id="killButt" type="button" name="clear" value="Clear Map" title="Clears map from all data"></input>
 			<br/>
