--- a/amisweb/perfmon.html
+++ b/amisweb/perfmon.html
@@ -70,7 +70,7 @@
 			<label>LEARN/CUDI - El Paso, TX<input type="checkbox" name="exchange"/></label>
 			<label>AMPATH/SOL - Miami, FL<input type="checkbox" name="exchange"/></label><br/>
 			<label>Instrument Location:</label>
-			<input type="radio" name="location" checked="true" id="ukyresultscheck"></input><label>U Kentuky</label>
+			<input type="radio" name="location" checked="true" id="ukyresultscheck"></input><label>U Kentucky</label>
 			<input type="radio" name="location" id="starresultscheck"></input><label>Starlight</label><br/>
 			<label for="perfMonType">Performance monitoring granularity/type:</label>
 			<select id="perfMonitorType" name="perfMonType" onchange="perfMonitorTypeChange()">
