--- a/amisweb/taskresults.html
+++ b/amisweb/taskresults.html
@@ -65,7 +65,7 @@
 		<fieldset>
 			<legend>Measurement Task Data Retrieval and Management</legend>
 			<label>Instrument Location:</label>
-			<input type="radio" name="location" checked="true" id="ukyresultscheck"></input><label>U Kentuky</label>
+			<input type="radio" name="location" checked="true" id="ukyresultscheck"></input><label>U Kentucky</label>
 			<input type="radio" name="location" id="starresultscheck"></input><label>Starlight</label><br/>
     		<input type="submit" onclick="getTaskListSelect();" value="Get Task List" />&nbsp;
     		<select id="taskList"></select><br/>
