--- a/amisweb/training.html
+++ b/amisweb/training.html
@@ -200,7 +200,7 @@
 	</main>
 
 	<footer>
-		<p>This website was created by Dr. Michael P. McGarry, <span class="currentYear">2015</span>
+		<p>This website was created by Dr. Michael P. McGarry and Rodrigo Ibáñez Alcalá, <span class="currentYear">2015</span>
 		<img src="images/utep_logo.png" alt="UTEP logo" width="50"/></p>
 	</footer>
 
